@@ -24,12 +24,12 @@ if {[build_executable "failed to prepare" $testfile $srcfile debug] == -1} {
     return -1
 }
 
-# Send a ctrl-c while the target is running and the next output causes
-# a pagination prompt.
+# Send a ctrl-c while the target is running and check that the output
+# does not cause a pagination prompt.
 
-proc test_ctrlc_while_target_running_paginates {} {
+proc test_ctrlc_while_target_running_does_not_paginate {} {
     global binfile srcfile
-    global gdb_prompt pagination_prompt
+    global gdb_prompt
 
     set testline [gdb_get_line_number "after sleep"]
 
@@ -62,18 +62,11 @@ proc test_ctrlc_while_target_running_paginates {} {
 	send_gdb "\003"
 
 	# GDB now intercepts the SIGINT and tries to let the user know
-	# about the spurious signal, but that paginates.  Make sure
-	# the user can respond to the pagination query.
-	set test "got prompt"
-	set saw_pagination_prompt 0
-	gdb_test_multiple "" $test {
-	    -re "$pagination_prompt$" {
-		set saw_pagination_prompt 1
-		send_gdb "\n"
-		exp_continue
-	    }
+	# about the spurious signal.  Make sure that this does not
+	# trigger pagination.
+	gdb_test_multiple "" "no pagination" {
 	    -re "$gdb_prompt $" {
-		gdb_assert $saw_pagination_prompt $test
+		pass $gdb_test_name
 	    }
 	}
 
@@ -85,4 +78,4 @@ proc test_ctrlc_while_target_running_paginates {} {
     }
 }
 
-test_ctrlc_while_target_running_paginates
+test_ctrlc_while_target_running_does_not_paginate
