@@ -1,3 +1,7 @@
+2020-10-30  Tankut Baris Aktemur  <tankut.baris.aktemur@intel.com>
+
+	* infrun.c (fetch_inferior_event): Temporarily disable pagination.
+
 2020-10-09  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* arch/aarch32.c (aarch32_create_target_description): Release the
